I/ingress-cT92wHZSq/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    release_group: release-name
    application: ingress
    component: error-pages
  name: ingress-error-pages
spec:
  clusterIP: None
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    release_group: release-name
    application: ingress
    component: error-pages
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-exporter
  labels:
    release_group: release-name
    application: ingress_exporter
    component: metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
spec:
  ports:
    - name: metrics
      port: 10254
  selector:
    release_group: release-name
    application: ingress
    component: server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    release_group: release-name
    application: ingress
    component: server
  name: ingress
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: status
      port: 10246
      protocol: TCP
      targetPort: 10246
  selector:
    release_group: release-name
    application: ingress
    component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-error-pages
  annotations:
    openstackhelm.openstack.org/release_uuid: ""
  labels:
    release_group: release-name
    application: ingress
    component: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: release-name
      application: ingress
      component: error-pages
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: ingress
        component: error-pages
      annotations:
        openstackhelm.openstack.org/release_uuid: ""
        configmap-bin-hash: c19c381491dfcc2096223838843f176b3eb6facd2c45774db3bc03f884f08bb3
        configmap-etc-hash: 084c05cac95676dc864092dea1138d3237b569806e970292b26900f66ff19a62
    spec:
      securityContext:
        runAsUser: 65534
      shareProcessNamespace: true
      serviceAccountName: ingress-error-pages
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: release_group
                      operator: In
                      values:
                        - release-name
                    - key: application
                      operator: In
                      values:
                        - ingress
                    - key: component
                      operator: In
                      values:
                        - error-pages
                topologyKey: kubernetes.io/hostname
              weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 60
      containers:
        - name: ingress-error-pages
          image: k8s.gcr.io/defaultbackend:1.4
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                "": NET_RAW
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
      volumes:
        - name: pod-tmp
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  annotations:
    openstackhelm.openstack.org/release_uuid: ""
  labels:
    release_group: release-name
    application: ingress
    component: server
    app: ingress-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  selector:
    matchLabels:
      release_group: release-name
      application: ingress
      component: server
      app: ingress-api
  template:
    metadata:
      labels:
        release_group: release-name
        application: ingress
        component: server
        app: ingress-api
      annotations:
        openstackhelm.openstack.org/release_uuid: ""
        configmap-bin-hash: c19c381491dfcc2096223838843f176b3eb6facd2c45774db3bc03f884f08bb3
        configmap-etc-hash: 084c05cac95676dc864092dea1138d3237b569806e970292b26900f66ff19a62
    spec:
      securityContext:
        runAsUser: 65534
      shareProcessNamespace: true
      serviceAccountName: release-name-ingress
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: release_group
                      operator: In
                      values:
                        - release-name
                    - key: application
                      operator: In
                      values:
                        - ingress
                    - key: component
                      operator: In
                      values:
                        - server
                topologyKey: kubernetes.io/hostname
              weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 60
      containers:
        - name: ingress
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 10400
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 10246
            - containerPort: 10254
            - containerPort: 8181
          command:
            - /tmp/ingress-controller.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/ingress-controller.sh
                  - stop
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: ingress-bin
              mountPath: /tmp/ingress-controller.sh
              subPath: ingress-controller.sh
              readOnly: true
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: ingress-bin
          configMap:
            name: ingress-bin
            defaultMode: 365
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: default-release-name
  annotations:
    kubernetes.io/ingress.class: nginx-cluster
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "X-Permitted-Cross-Domain-Policies: none";
      more_set_headers "Content-Security-Policy: script-src 'self'";
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: '*.default.svc.cluster.local'
      http:
        paths:
          - path: /
            backend:
              serviceName: ingress
              servicePort: 80
